namespaces/live.cloud-platform.service.justice.gov.uk/disclosure-checker-qa/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: disclosure-checker-qa
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "qa"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/application: "Check when to disclose cautions or convictions"
    cloud-platform.justice.gov.uk/owner: "Central Digital Product Team: Central-Digital-Product-Team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/disclosure-checker"
    cloud-platform.justice.gov.uk/slack-channel: "cdpt-central-digital-product-team"
    cloud-platform.justice.gov.uk/team-name: "central-digital-product-team"
